fixed spacing issues

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -147,6 +147,23 @@ p {
 }
 
 .content {
+  margin: auto;
+  width: 100%;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+}
+
+.transition-group {
+  margin: auto;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+hr {
   width: 100%;
 }
 
